# fights

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  python-build-and-publish.yml  python-lint.yml  python-publish.yml  python-test.yml  rust.yml  test.yml
docs/: conf.py  fights.base.rst  fights.envs.pouribor.rst  fights.envs.quoridor.rst  fights.envs.rst  index.rst  quickstart.rst  requirements.txt
examples/: manual.py  manual_puoribor.py  othello_random.py  puoribor.ipynb  puoribor.py
examples/agent_examples/: puoribor_alphabeta  quoridor_alphabeta
examples/agent_examples/puoribor/: puoribor_alphabeta.py  puoribor_greedy.py  puoribor_minimax  puoribor_minimax.py
examples/agent_examples/quoridor/: quoridor_alphabeta.py  quoridor_greedy  quoridor_greedy.py  quoridor_minimax  quoridor_minimax.py
fights/: base-action.py  base-agent.py  base-game.py  base-state.py  base.py  base_action.py  base_game.py  base_state.py  fights_srv.pyi  main.py  util.py
fights-rust/: Cargo.toml
fights-rust/src/: lib.rs  main.rs
fights-srv/: Cargo.toml
fights-srv/src/: agent.rs  env.rs  game.rs  lib.rs  main.rs  ndarray.rs  user.rs
fights-srv/src/env/: gomoku.rs  mod.rs
fights-srv/src/room/: mod.rs  routes.rs
fights-srv/src/session/: handlers.rs  mod.rs
fights/base/: __init__.py  base_agent.py  base_env.py  base_rule.py
fights/envs/: __init__.py  cythonfn.c  cythonfn.pyx  gomoku.py  othello.py  othello_cythonfn.pyx  othello_setup.py  pouribor.py  puoribor.py  puoribor_cython.c  puoribor_cython.pyx  puoribor_setup.py  quoridor.py  quoridor_cython.c  quoridor_cython.pyx  quoridor_setup.py  setup.py
fights/example/gomoku/: agent.py  env_util.py  main.py
fights/fights_rust/: __init__.pyi
fights/games/gomoku/: __init__.py  basic_rule.py  computer_agent.py  const_variable.py  gomoku_env.py  renju_rule.py  text_display.py  user_agent.py
fightsctl/: Cargo.toml
src/fights/envs/: othello.py  othello_cythonfn.pyi  othello_cythonfn.pyx  puoribor.py  puoribor_cython.pyi  puoribor_cython.pyx  quoridor.py  quoridor_cython.pyi  quoridor_cython.pyx
tests/: benchmark.py  test_fights.py  test_gomoku.py  test_othello_env.py  test_othello_state.py  test_puoribor.py  test_puoribor_env.py  test_puoribor_state.py  test_quoridor_env.py  test_quoridor_state.py
