[project]
name = "fights"
description = "Competitive artificial intelligence battle environments"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "PoApper, Inc.", email = "support@poapper.com"}
]
maintainers = [
  {name = "Lucas Yunkyu Lee", email = "me@luc.li"},
  {name = "Ryang Sohn", email = "loop.infinitely@gmail.com"},
  {name = "Taemin Lee"},
]
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy >= 1.21",
    "typing_extensions"
]
dynamic = ["version"]

[project.urls]
documentation = "https://fights.readthedocs.io"
repository = "https://github.com/poapper-inc/fights"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fights.envs" = ["*.pyx", "*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "fights.__version__"}

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.cibuildwheel]
build-frontend = "build"
skip = "pp* *-musllinux*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
