[metadata]
name = fights
version = attr: fights.__version__
url = https://github.com/poapper-inc/fights
author = PoApper, Inc.
author_email = support@poapper.com
maintainer = Lucas Yunkyu Lee
maintainer_email = me@luc.li
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT License
license_file = LICENSE.txt
description = Competitive artificial intelligence battle environments
long_description = file: README.md
long_description_content_type = text/markdown
project_urls=
    Documentation = https://fights.readthedocs.io
    Source = https://github.com/poapper-inc/fights

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
packages = find:
ext_package = fights
install_requires =
    numpy>="1.21"
    typing-extensions
