[package]
name = "fights-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "fights_rust"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.16.4", features = ["extension-module"] }
fights-srv = { path = "../fights-srv" }
