[package]
name = "fights-srv"
version = "0.1.0"
edition = "2021"

[lib]
name = "fights_srv"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }